@@ -1,3 +1,8 @@
+2005-01-05  Werner Koch  <wk@g10code.com>
+
+	* serpent.c: s/u32_t/u32/ and s/byte_t/byte/.  Too match what we
+	have always used and are using in all other files too.
+
 2004-12-09  Werner Koch  <wk@g10code.com>
 
 	* serpent.c (serpent_test): Moved prototype out of a fucntion.
